header/footer and body heading

--- a/index.html
+++ b/index.html
@@ -4,10 +4,45 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>TESjs</title>
-        <meta name="description" content="The website for TESjs">
+        <meta name="description" content="A module to streamline the use of Twitch EventSub in Node.js applications">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./tes_styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+        <link rel='canonical' href='https://www.tesjs.com'/>
+        <link rel='canonical' href='https://tesjs.com'/>
     </head>
     <body>
-        TESjs
+        <header>
+            <div class='header-container'>
+                <a href='#' class='header-logo tes-logo'>TESjs</a>
+            </div>
+        </header>
+        <div class='tes-body'>
+            <div class='tes-content-heading'>
+                <div class='tes-content-logo'>
+                    <svg viewBox='0 0 42 16' width='100%' height='100%'>
+                        <text x='50%' y='50%' dy='25%' text-anchor='middle' font-family='Josefin Sans'>TESjs</text>
+                    </svg>
+                </div>
+                <div class='tes-content-heading-blurb'>
+                    <h1>Streamlining the use of Twitch EventSub</h1>
+                    <p>Easily subscribe to Twitch EventSub topics.  Quickly start up a webhooks endpoint and listen to Twitch EventSub notifications.</p>
+                    <div class='button-row' style='margin-top: 1rem;'>
+                        <a href='https://www.npmjs.com/package/tesjs' class='button-link mdi mdi-npm' target='_blank' rel='noopener noreferrer'> NPM</a>
+                        <a href='https://github.com/mitchwadair/tesjs' class='button-link mdi mdi-github' target='_blank' rel='noopener noreferrer'> GitHub</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class='footer-container'>
+                <span class='mdi mdi-copyright' style="padding-right: .25rem;"></span>
+                <a href='https://github.com/mitchwadair' class='footer-link' target='_blank' rel='noopener noreferrer'>Mitchell Adair</a>
+                <span style="padding-left: .25rem;">2020</span>
+            </div>
+        </footer>
     </body>
 </html>
