--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <div class='tes-content-heading'>
                     <div class='tes-content-logo'>
                         <svg viewBox='0 0 42 16' width='100%' height='100%'>
+                            <style type='text/css'>
+                                @font-face {
+                                    font-family: 'Josefin-Sans';
+                                    src: url('./fonts/JosefinSansBoldItalic-EaJRg.ttf');
+                                }
+                            </style>
                             <text x='50%' y='50%' dy='25%' text-anchor='middle' font-family='Josefin Sans'>TESjs</text>
                         </svg>
                     </div>
