change logo inline svg to img

--- a/index.html
+++ b/index.html
@@ -29,15 +29,7 @@
             <div class='tes-content'>
                 <div class='tes-content-heading'>
                     <div class='tes-content-logo'>
-                        <svg viewBox='0 0 42 16' width='100%' height='100%'>
-                            <style type='text/css'>
-                                @font-face {
-                                    font-family: 'Josefin-Sans';
-                                    src: url('./fonts/JosefinSansBoldItalic-EaJRg.ttf');
-                                }
-                            </style>
-                            <text x='50%' y='50%' dy='25%' text-anchor='middle' font-family='Josefin Sans'>TESjs</text>
-                        </svg>
+                        <img src='./assets/tesjs.svg' alt='TESjs' style='width: 100%'/>
                     </div>
                     <div class='tes-content-heading-blurb'>
                         <h1>Streamlining the use of Twitch EventSub</h1>
