site performance boost

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="A module to streamline the use of Twitch EventSub in Node.js applications">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./tes_styles.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
+        <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css" onload="this.onload=null;this.rel='stylesheet'">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@10.4.0/styles/agate.min.css">
