add custom hljs theme

--- a/index.html
+++ b/index.html
@@ -10,10 +10,45 @@
         <link rel="preload" as="style" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css" onload="this.onload=null;this.rel='stylesheet'">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@10.4.0/styles/agate.min.css">
 
         <link rel='canonical' href='https://www.tesjs.com'/>
         <link rel='canonical' href='https://tesjs.com'/>
+
+        <style>
+            .hljs {
+                display: block;
+                overflow-x: auto;
+                padding: 0.5em;
+                background: #363546;
+                -moz-tab-size: 4;
+                tab-size: 4;
+            }
+
+            .hljs-comment,
+            .hljs-quote {
+                color: #738290;
+                font-style: italic;
+            }
+
+            .hljs-keyword {
+                color: #855CAD;
+            }
+
+            .hljs-built_in {
+                color: #FFAD99;
+            }
+
+            .hljs-string {
+                color: #85EAA7;
+            }
+
+            .hljs-attr {
+                color: #A68C98;
+            }
+            .hljs-subst {
+                color: #4E74BC; /*#6C61D1;*/
+            }
+        </style>
     </head>
     <body>
         <header>
