--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <body>
         <header>
             <div class='header-container'>
-                <a href='#' class='header-logo tes-logo'>TESjs</a>
+                <a href='#'><img src='./assets/tesjs.svg' alt='TESjs' style='height: 1.5rem'/></a>
                 <div class='button-row' style='margin: 0 1rem 0 auto'>
                     <a href='https://www.npmjs.com/package/tesjs' class='button-icon mdi mdi-npm' target='_blank' rel='noopener noreferrer' title='TESjs on npm'></a>
                     <a href='https://github.com/mitchwadair/tesjs' class='button-icon mdi mdi-github' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'></a>
@@ -155,6 +155,21 @@ tes.subscribe('channel.update', {
     console.log('Subscription successful');
 }).catch(err => {
     console.log(err);
+});
+                            </code>
+                        </pre>
+                    </section>
+                    <section>
+                        <span id='revocation-clean-up'></span>
+                        <a href='#revocation-clean-up' class='tes-anchor'>
+                            <h1>Clean Up Revoked Subscriptions</h1>
+                        </a>
+                        <pre>
+                            <code class='js tes-code'>
+// the 'revocation' event will be fired if an subscription gets revoked by Twitch
+tes.on('revocation', (subscriptionId, status, type, version, condition, transport, createdAt) => {
+    console.log(`subscription with id ${subscriptionId} has been revoked`);
+    // perform cleanup here
 });
                             </code>
                         </pre>
