--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
                         </p>
                     </div>
                 </div>
+                <div style='margin: 1rem; padding: 0 1rem 2rem 2rem; border-bottom: 1px solid var(--bg-primary)'>
+                    <h2 style='font-weight: lighter; font-size: 1.75rem;'>Documentation</h2>
+                    <p>
+                        For in-depth details and examples on using TESjs, check out the 
+                        <a href='https://github.com/mitchwadair/tesjs/tree/main/doc' style='color: var(--primary)' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'>documentation</a>
+                         on GitHub.  There you can learn about all of the features available to you in TESjs and get direct references to supplemental documentation from Twitch.
+                    </p>
+                </div>
                 <div class='tes-examples'>
                     <section style='margin-bottom: 1rem'>
                         <span id='install'></span>
@@ -167,13 +175,30 @@ tes.subscribe('channel.update', {
                         <pre>
                             <code class='js tes-code'>
 // the 'revocation' event will be fired if an subscription gets revoked by Twitch
+// if there is any necessary cleanup for your app, use this event to do it
 tes.on('revocation', (subscriptionId, status, type, version, condition, transport, createdAt) => {
     console.log(`subscription with id ${subscriptionId} has been revoked`);
-    // perform cleanup here
+    // perform necessary cleanup here
 });
                             </code>
                         </pre>
                     </section>
+                </div>
+                <div style='margin: 1rem; padding: 0 1rem 2rem 2rem; border-top: 1px solid var(--bg-primary);'>
+                    <h2 style='font-weight: lighter; font-size: 1.75rem;'>Support the Project</h2>
+                    <p>
+                        If you would like to support the development and maintenance of TESjs, please consider supporting the project through 
+                        <a href='https://github.com/sponsors/mitchwadair' target='_blank' rel='noopener noreferrer' title='GitHub Sponsors' style='color: var(--primary)'>GitHub Sponsors</a> 
+                        or through a one-time 
+                        <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD' target='_blank' rel='noopener noreferrer' title='PayPal Donation' style='color: var(--primary)'>PayPal donation</a>
+                        .  Donations are not required but are much appreciated and will directly support efforts to continue developing TESjs.
+                    </p>
+                    <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=9WS3KJPAV8JDJ&currency_code=USD' target='_blank' rel='noopener noreferrer' title='PayPal Donation'>
+                        <img src="https://www.paypalobjects.com/digitalassets/c/website/marketing/na/us/logo-center/Badge_1.png" alt="PayPal Logo" class='tes-support-img'>
+                    </a>
+                    <a href='https://github.com/sponsors/mitchwadair' target='_blank' rel='noopener noreferrer' title='GitHub Sponsors'>
+                        <img src="https://github.githubassets.com/images/modules/site/sponsors/logo-mona-2.svg" alt="GitHub Sponsors Logo" class='tes-support-img'>
+                    </a>
                 </div>
             </div>
             <footer>
