fix some vertical alignment in header

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <body>
         <header>
             <div class='header-container'>
-                <a href='#'><img src='./assets/tesjs.svg' alt='TESjs' style='height: 1.5rem'/></a>
+                <a href='#' style='height: 1.5rem;'><img src='./assets/tesjs.svg' alt='TESjs' style='height: 100%'/></a>
                 <div class='button-row' style='margin: 0 1rem 0 auto'>
                     <a href='https://www.npmjs.com/package/tesjs' class='button-icon mdi mdi-npm' target='_blank' rel='noopener noreferrer' title='TESjs on npm'></a>
                     <a href='https://github.com/mitchwadair/tesjs' class='button-icon mdi mdi-github' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'></a>
