minor style changes to look better

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>TESjs</title>
+        <title>TESjs - Streamlining Twitch EventSub</title>
         <meta name="description" content="A module to streamline the use of Twitch EventSub in Node.js applications">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./tes_styles.css">
@@ -70,14 +70,17 @@
                     <div class='tes-content-heading-blurb'>
                         <h1>Streamlining the use of Twitch EventSub</h1>
                         <p>Easily subscribe to Twitch EventSub topics.  Quickly start up a webhooks endpoint and listen for Twitch EventSub notifications.</p>
-                        <div style='display: flex; flex-direction: row; align-items: center; margin-top: 1rem;'>
-                            <span style="font-weight: lighter; font-size: 1.5rem;">Visit TESjs:</span>
+                        <div style='display: flex; flex-direction: row; align-items: center; justify-content: center; margin-top: 1rem;'>
                             <div class='button-row'>
-                                <a href='https://www.npmjs.com/package/tesjs' class='button-link mdi mdi-npm' target='_blank' rel='noopener noreferrer' title='TESjs on npm'> NPM</a>
-                                <a href='https://github.com/mitchwadair/tesjs' class='button-link mdi mdi-github' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'> GitHub</a>
+                                <a href='https://www.npmjs.com/package/tesjs' class='button-link mdi mdi-npm' target='_blank' rel='noopener noreferrer' title='TESjs on npm'>
+                                    <span>NPM</span>
+                                </a>
+                                <a href='https://github.com/mitchwadair/tesjs' class='button-link mdi mdi-github' target='_blank' rel='noopener noreferrer' title='TESjs on GitHub'>
+                                    <span>GitHub</span>
+                                </a>
                             </div>
                         </div>
-                        <div style='display: flex; flex-direction: row; align-items: center; margin-top: 1rem;'>
+                        <div style='display: flex; flex-direction: row; justify-content: center; align-items: center; margin-top: 1rem;'>
                             <span style="font-weight: lighter; font-size: 1.5rem;">Current Version:</span>
                             <span id='version-number' style='font-weight: lighter; font-size: 1.5rem; margin-left: .5rem'></span>
                         </div>
